# LaOS

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  attach-gdb.sh  debug-run.sh  gf2-run.sh  link.ld  main.c  run-gdb.sh  run.sh  setup-env.sh  setup-local-env.sh  steps.md
cmake/: aarch64-none-elf-toolchain.cmake
src/: CMakeLists.txt  armv8-a.h  console.c  console.h  cpu.h  el1_vectors.s  el2_vectors.s  gic.c  gic.h  io-buffer.c  io.c  io.h  isr.c  link.ld  main.c  mmu.h  pl011.c  pl011.h  platform.h  sched.c  sched.h  sem.c  sem.h  start.s  sys-timer.c  sys-timer.h  syscall.c  syscall.h  vectors.s
src/common/: CMakeLists.txt
src/common/include/: fcntl.h  syscall-common.h  unistd.h
src/common/include/sys/: types.h
src/kernel/: CMakeLists.txt  armv8-a.h  console.c  console.h  el1_vectors.s  elf-loader.c  elf-loader.h  gic.c  gic.h  io-buffer.h  io.c  isr.c  link.ld  log.h  main.c  memory.c  memory.h  mmu.c  mmu.h  pl011.h  platform.h  process.c  process.h  ramfs.c  ramfs.h  sched.c  sched.h  sem.c  sem.h  serial-buffer.c  serial-buffer.h  sp804.c  sp804.h  spinlock.c  spinlock.h  start.s  sys-timer.h  syscall-common.h  syscall-kernel.c  syscall-kernel.h  (+3 more)
src/kernel/include/sys/: types.h
src/libc/: CMakeLists.txt  libc-impl.h  malloc.c  memcpy.c  memset.c  snprintf.c  strcmp.c  strcpy.c  strlen.c  vsnprintf.c  wrapper.c
src/libc/include/: stdio.h  stdlib.h  string.h
src/user/: crt.s  link.ld
src/user/common/: CMakeLists.txt  crt.s  link.ld  syscall-user.c
src/user/common/include/: unistd.h
src/user/init/: CMakeLists.txt  Makefile  main.c  syscall-user.c
tests/: CMakeLists.txt  memcpy_test.cc  rungtest.sh  snprintf_test.cc  strcmp_test.cc  strlen_test.cc  test
tests/libc/: CMakeLists.txt  memcpy_test.cc  snprintf_test.cc  strcmp_test.cc  strlen_test.cc
